Fixed icon alignment

--- a/src/components/Simulator/CircuitCanvas.scss
+++ b/src/components/Simulator/CircuitCanvas.scss
@@ -1,4 +1,5 @@
 .partOptionsContainer {
+  top: 3rem;
   position: absolute;
   right: 0;
   z-index: 1000;
