--- a/src/components/Simulator/PartSelector.scss
+++ b/src/components/Simulator/PartSelector.scss
@@ -22,7 +22,7 @@ $part-size: 3.5rem;
 
 .selector-toggle {
   position: fixed;
-  right: 1rem;
+  right: 0.5rem;
   z-index: 1000;
   font-size: 1.3rem;
 }
